--- a/Consolecraft/Consolecraft.vcxproj.filters
+++ b/Consolecraft/Consolecraft.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClInclude Include="Consolecraft.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="typePoint.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Consolecraft.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
