--- a/Consolecraft/Consolecraft.vcxproj
+++ b/Consolecraft/Consolecraft.vcxproj
@@ -126,15 +126,19 @@
     <ClInclude Include="commands.h" />
     <ClInclude Include="Consolecraft.h" />
     <ClInclude Include="Degree.h" />
+    <ClInclude Include="help.h" />
+    <ClInclude Include="KeyboardMap.h" />
     <ClInclude Include="MovableObj.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="typePoint.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Consolecraft.cpp" />
     <ClCompile Include="Degree.cpp" />
     <ClCompile Include="MovableObj.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
